--- a/game-art.html
+++ b/game-art.html
@@ -33,7 +33,7 @@
 <body>
    <div class="preloader" id="preloader">
       <div class="spinner-grow" role="status">
-         <span class="visually-hidden">Loading...</span>
+         <span class="visually-hidden">Yükleniyor...</span>
       </div>
    </div>
 
@@ -239,8 +239,8 @@
             <div class="col-12 col-md-7 col-lg-8">
                <div class="project-details-content">
                   <h2>ReelRusher Görsel Tasarım Süreci</h2>
-                  <p>ReelRusher'ın görsel tasarımı, oyun deneyiminin her detayında kullanıcı etkileşimini ve görsel çekiciliği optimize etmek amacıyla geliştirilmiştir. Arayüz tasarımından karakter konseptlerine, renkli top animasyonlarından özel efektlere kadar her element oyunun Match-3 ve Zuma hibrit mekaniklerine uygun olarak tasarlanmıştır.</p>
-                  <p>Piramit şeklindeki oyun tahtası tasarımı, modern minimalist yaklaşımla birleştirildi. Renkli topların görsel ayrımını netleştirmek ve oyun deneyimini iyileştirmek için özel renk paletleri ve efektler geliştirildi. Her seviye için benzersiz görsel temalar ve arka plan tasarımları oluşturuldu.</p>
+                  <p>ReelRusher'ın görsel tasarımı, oyunun her detayında kullanıcı etkileşimini ve çekiciliğini en üst düzeye çıkarmak için tasarlanmıştır.  Arayüzünün tasarımı, karakterlerin fikirleri ve renkli top animasyonlarının yanı sıra özel efektler, oyunun Match-3 ve Zuma hibrit mekaniklerine uygun olarak tasarlanmıştır.</p>
+                  <p>Piramit şeklindeki oyun tahtasının tasarımında çağdaş, minimal bir stil kullanılmıştır.  Özel renk paletleri ve efektler, renkli topların görsel ayrımını netleştirmek ve oyun deneyimini geliştirmek için geliştirildi.  Her seviye için farklı görsel temalar ve arka plan tasarımları tasarlandı.</p>
                   <div class="row g-4">
                      <div class="col-12 col-sm-6">
                         <img src="assets/113-CWUp3qjE.jpg" alt="">
@@ -249,11 +249,11 @@
                         <img src="assets/114-Bw0m9Omd.jpg" alt="">
                      </div>
                   </div>
-                  <p>ReelRusher'ın logo tasarımı ve marka kimliği, oyunun dinamik yapısını yansıtacak şekilde geliştirildi. Typography seçimi, renk paleti ve görsel elementler, hedef kitlenin beklentilerini karşılayacak şekilde optimize edildi. Türkiye pazarına özel lokalizasyon çalışmaları da tasarım sürecinin ayrılmaz bir parçası oldu.</p>
+                  <p>ReelRusher'ın marka kimliği ve logosu, oyunun dinamik yapısını yansıtacak şekilde yeniden tasarlandı.  Hedef kitlenin beklentilerini karşılayacak şekilde tasarım, renk paleti ve görsel öğeler seçildi.  Tasarım sürecinde ayrıca Türkiye pazarına özel lokalizasyon çalışmaları yer aldı.</p>
                   <h2>Tasarım Zorlukları ve Çözümler</h2>
-                  <p>Ana zorluk, klasik Match-3 oyunlarının görsel dilini Zuma mekaniklerinin dinamik yapısıyla harmanlayarak benzersiz bir görsel deneyim oluşturmaktı. Piramit yapısının karmaşık geometrisini basit ve anlaşılır bir şekilde sunmak için çoklu iterasyon süreçleri yürütüldü.</p>
+                  <p>Birincisi, klasik Match-3 oyunlarının görsel dilini Zuma mekaniklerinin dinamik yapısıyla birleştirerek farklı bir görsel deneyim yaratmaktı.  Piramit yapısının karmaşık geometrisini basitleştirmek için çeşitli iterasyon süreçleri kullanıldı.</p>
                   <h2>Final Sonuç</h2>
-                  <p>ReelRusher'ın görsel tasarımı, modern oyun endüstrisinin standartlarını karşılayan, kullanıcı dostu ve görsel olarak etkileyici bir deneyim sunmaktadır. Oyunun tüm görsel elementleri, farklı cihazlarda ve çözünürlüklerde optimize edilmiş olarak sunulmaktadır. Marka kimliği ve oyun içi tasarımlar arasındaki tutarlılık, profesyonel bir oyun deneyimi yaratmaktadır.</p>
+                  <p>ReelRusher, çağdaş oyun endüstrisinin standartlarını karşılayan görsel olarak etkileyici bir kullanıcı deneyimi sunar.  Farklı cihazlarda ve çözünürlüklerde tüm görsel öğeler optimize edildi.  Oyun içi tasarımlar ve marka kimliği arasındaki tutarlılık, oyun oynarken profesyonel bir deneyim sağlar..</p>
                </div>
             </div>
 
