--- a/mechanics.html
+++ b/mechanics.html
@@ -152,10 +152,10 @@
                <div class="service-details-content">
                   <img src="assets/108-CzxIHmIc.jpg" alt="">
                   <h2>ReelRusher Oyun Mekanikleri</h2>
-                  <p>ReelRusher, klasik Match-3 puzzle oyunlarının heyecanını Zuma mekaniklerinin stratejik derinliği ile birleştiren yenilikçi bir oyun deneyimi sunar. Piramit şeklindeki tahta üzerinde renkli topları eşleştirme, combo zincirleri oluşturma ve özel güçler kullanma mekaniklerini keşfedin.</p>
-                  <p>Her seviye benzersiz zorluklar ve stratejik yaklaşımlar gerektirir. Topları dikkatli bir şekilde yerleştirerek zincirleme reaksiyonlar oluşturun, özel güçler kazanın ve en yüksek skorlara ulaşın. Oyunun dinamik fizik motoru sayesinde her atış gerçekçi ve tatmin edici bir deneyim sunar.</p>
+                  <p>ReelRusher, klasik Match-3 puzzle oyunlarının heyecanını Zuma mekaniklerinin stratejik derinliği ile birleştiren yenilikçi bir oyun deneyimidir.  Piramit şeklindeki tahta üzerinde renkli topları karıştırma, combo zincirleri yapma ve özel güçler kullanma yöntemlerini öğrenin.</p>
+                  <p>Her seviye farklı zorluklar ve taktikler gerektirir.  Dikkatli bir şekilde topları yerleştirerek zincirleme reaksiyonlar oluşturun, özel güçler kazanın ve en yüksek skorlara ulaşın.  Her atış, oyunun dinamik fizik motoru sayesinde gerçekçi ve keyifli bir deneyimdir.</p>
                   <h2>Temel Oyun Mekanikleri</h2>
-                  <p>ReelRusher'ın temel mekaniklerini anlamak oyunda başarılı olmak için kritik öneme sahiptir. İşte temel oyun kuralları ve stratejiler:</p>
+                  <p>ReelRusher'ın temel mekaniklerini anlamak, oyunda başarılı olmak için çok önemlidir.  Oyunun temel kuralları ve stratejileri aşağıdaki gibidir:</p>
                   <ul class="p-0 list-unstyled">
                      <li><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewbox="0 0 28 28" fill="none">
                            <path d="M12.1473 23.354C12.144 23.354 12.1402 23.354 12.1369 23.354C12.0013 23.3512 11.8733 23.2932 11.7814 23.1937L2.40471 12.9978C2.24392 12.8228 2.22916 12.5592 2.36971 12.3672C2.51025 12.1758 2.76619 12.1102 2.98166 12.2108L11.5638 16.2293C11.636 16.2632 11.7213 16.2468 11.7765 16.1893L24.8676 2.50708C25.0448 2.32169 25.3346 2.30145 25.5359 2.46114C25.7371 2.62083 25.7836 2.90739 25.6431 3.12231L12.6209 23.0712C12.6023 23.1002 12.5804 23.1265 12.5563 23.1511L12.4989 23.2085C12.4054 23.3015 12.2785 23.354 12.1473 23.354Z" fill="#011832"></path>
@@ -179,12 +179,12 @@
                         <img src="assets/110-B8xy7JB4.jpg" alt="">
                      </div>
                   </div>
-                  <p>ReelRusher'da her hamle önemlidir. Topları doğru açıyla fırlatarak zincirleme reaksiyonlar oluşturun ve skorunuzu katlayın. Oyunun benzersiz fizik motoru sayesinde her atış gerçekçi ve tahmin edilebilir davranır, bu da stratejik planlama yapmanıza olanak tanır.</p>
-                  <p>Özel güçler sistemi oyuna derinlik katar. Bomba toplar, gökkuşağı toplar ve dondurucu güçler gibi özel yetenekleri doğru zamanda kullanarak en zor seviyeleri bile geçebilirsiniz. Her güç farklı stratejiler gerektirir ve oyunu her defasında yeniden keşfetmenize imkan sağlar.</p>
+                  <p>ReelRusher'da her hamle hayati önem taşır.  Topları doğru açıyla fırlatarak zincirleme reaksiyonlar oluşturun ve skorunuzu artırın.  Oyunun benzersiz fizik motoru sayesinde, her atış gerçekçi ve tahmin edilebilir davranır. Bu, stratejik planlama yapmanıza olanak tanır.</p>
+                  <p>Özel güçler, sistemi kullanarak oyuna derinlik katar.  Doğru zamanda bomba topları, gökkuşağı topları ve dondurucu güçleri kullanarak en zor seviyeleri bile aşabilirsiniz.  Her güç farklı stratejiler kullanır, bu da oyunu her zaman yeniden keşfetmenize olanak tanır..</p>
                   <img src="assets/98-D6V1f97g.jpg" alt="">
                   <h2>İleri Seviye Oyun Stratejileri</h2>
-                  <p>ReelRusher'da ustalaşmak için sadece topları eşleştirmek yeterli değildir. Piramit yapısının dinamiklerini anlamak, zincirleme kombo sistemini etkin kullanmak ve her seviyenin özel gereksinimlerini kavramak gerekmektedir.</p>
-                  <p>Profesyonel oyuncular genellikle tahta durumunu analiz ederek en verimli hamleleri planlarlar. Üst sıralardaki topları temizlemek, alt sıralar için alan açar ve daha büyük kombo zincirleri oluşturma şansı verir. Bu yaklaşım özellikle zaman baskısı olan seviyelerde kritik öneme sahiptir.</p>
+                  <p>ReelRusher'da ustalaşmak için topları eşleştirmek yeterli değildir.  Piramit yapısının dinamiklerini anlamak, zincirleme kombo sistemini etkili bir şekilde kullanmak ve her seviyenin farklı ihtiyaçlarını anlamak çok önemlidir.</p>
+                  <p>Profesyonel oyuncular, tahta durumunu analiz ederek en etkili stratejileri tasarlar.  Üst sıralardaki topları temizlemek, alt sıralarda daha büyük kombo zincirleri oluşturmak için alan yaratır.  Zaman baskısı olan seviyelerde bu yaklaşım çok önemlidir.</p>
                </div>
             </div>
 
@@ -253,7 +253,7 @@
                               <path d="M8.33333 25H15L10 35H5L8.33333 25ZM25 25H31.6667L26.6667 35H21.6667L25 25Z" fill="#174035"/>
                             </svg>
                            </div>
-                           <p class="testimonial-text">Klasik seviyeler: Temel eşleştirme mekaniği ile piramit yapısını temizleyin. Bu seviyelerde zaman baskısı yoktur, sadece strateji ve doğru hamleler önemlidir.</p>
+                           <p class="testimonial-text">Klasik seviyeler: Piramit yapısını temel eşleştirme mekaniğıyla temizleyin. Bu noktada zaman baskısı yoktur; sadece doğru strateji ve hamleler önemlidir.</p>
                            <div class="testimonial-info">
                               <h4 class="mb-1">Klasik Seviyeler</h4>
                               <p class="mb-0">Temel Mod</p>
@@ -268,7 +268,7 @@
                               <path d="M8.33333 25H15L10 35H5L8.33333 25ZM25 25H31.6667L26.6667 35H21.6667L25 25Z" fill="#174035"/>
                             </svg>
                            </div>
-                           <p class="testimonial-text">Zaman yarışı seviyeleri: Süre dolmadan piramidi temizlemeniz gereken heyecanlı modlarda özel güçler ve hızlı düşünme kritik öneme sahiptir.</p>
+                           <p class="testimonial-text">Zaman yarışı seviyeleri: Süre dolmadan piramidi temizlemeniz gereken heyecan verici modlarda, hızlı düşünme ve özel güçler çok önemlidir.</p>
                            <div class="testimonial-info">
                               <h4 class="mb-1">Zaman Yarışı</h4>
                               <p class="mb-0">Hızlı Mod</p>
@@ -318,9 +318,7 @@
                            </button>
                         </div>
                         <div id="faqQuestion1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
-                           <div class="accordion-body">
-                              ReelRusher'da amacınız renkli topları piramit şeklindeki tahtada eşleştirmektir. 3 veya daha fazla aynı renk topu yan yana getirerek onları temizleyin ve yüksek skorlar elde edin.
-                           </div>
+                           <div class="accordion-body">ReelRusher'da amaç, renkli topları piramit şeklindeki tahtada bir araya getirmek. 3 veya daha fazla aynı renkli topu yan yana getirerek yüksek skorlar alın.</div>
                         </div>
                      </div>
 
@@ -331,9 +329,7 @@
                            </button>
                         </div>
                         <div id="faqQuestion2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                           <div class="accordion-body">
-                              Özel güçler büyük eşleştirmeler yaparak kazanılır. Bomba toplar çevresindeki topları yok eder, gökkuşağı toplar herhangi bir renkle eşleşebilir ve dondurucu güçler zamana karşı yarıştığınız seviyelerde ekstra süre verir.
-                           </div>
+                           <div class="accordion-body">Büyük eşleştirmeler özel güçler sağlar. Gökkuşağı topları herhangi bir renkle eşleşebilir, bomba topları çevresindeki topları yok eder ve dondurucu güçler size daha fazla zaman verir.</div>
                         </div>
                      </div>
 
@@ -344,9 +340,7 @@
                            </button>
                         </div>
                         <div id="faqQuestion3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                           <div class="accordion-body">
-                              Zincirleme eşleştirmeler yaparak combo puanları kazanabilirsiniz. Her ardışık eşleştirme combo çarpanınızı artırır ve daha yüksek skorlar elde etmenizi sağlar. Komboları kesintisiz tutmak için hızlı düşünün!
-                           </div>
+                           <div class="accordion-body">Zincirleme eşleştirmeler yaparak combo puanları kazanabilirsiniz. Her ardışık eşleştirme kombinasyonu, çarpanınızı artırır ve daha yüksek skorlar elde etmenize yardımcı olur. Komboları kesintisiz tutmak için hemen harekete geçin!</div>
                         </div>
                      </div>
 
@@ -370,7 +364,7 @@
                   <a href="/" class="footer-logo mb-4">
                      <img src="assets/nav-brand-footer.png" alt="ReelRusher">
                   </a>
-                  <p style="color: #E8F5E8;">ReelRusher - Match-3 ve Zuma mekaniklerini birleştiren, piramit şeklinde tahta ile benzersiz bir puzzle oyun deneyimi.</p>
+                  <p style="color: #E8F5E8;">ReelRusher - Match-3 ve Zuma mekaniklerini birleştiren piramit şeklinde bir tahta ile benzersiz bir puzzle oyunudur.</p>
                 
                </div>
             </div>
