--- a/roadmap.html
+++ b/roadmap.html
@@ -139,8 +139,7 @@
                <div class="hero-content mt-0">
                   <h2 class="text-white mb-4 wow fadeInUp" data-wow-delay="500ms" data-wow-duration="1000ms">ReelRusher 
                      geliştirme yol haritamızı keşfet</h2>
-                  <p class="text-white wow fadeInUp" data-wow-delay="700ms" data-wow-duration="1000ms">En heyecan verici 
-                     Match-3 Zuma puzzle oyununu yaratmak için hazırladığımız detaylı geliştirme planımızı incele.</p>
+                  <p class="text-white wow fadeInUp" data-wow-delay="700ms" data-wow-duration="1000ms">En heyecan verici Match-3 Zuma puzzle oyununu oluşturmak için hazırladığımız kapsamlı geliştirme planımızı inceleyin.</p>
                   <a href="contact.html" class="btn btn-primary wow fadeInUp" data-wow-delay="900ms" data-wow-duration="1000ms">
                      <span>Erken Erişim <i class="ti ti-arrow-up-right"></i></span>
                      <span>Erken Erişim <i class="ti ti-arrow-up-right"></i></span>
@@ -208,7 +207,7 @@
                   </div>
                   <div>
                      <h5>Detaylı Planlama</h5>
-                     <p class="mb-0">Her aşama dikkatli bir şekilde planlanmış ve hedeflenen tarihler belirlenmiştir.</p>
+                     <p class="mb-0">Her aşama dikkatlice planlanmıştır ve hedeflenen tarihler belirlenmiştir.</p>
                   </div>
                </div>
             </div>
@@ -224,7 +223,7 @@
                   </div>
                   <div>
                      <h5>Güvenli Geliştirme</h5>
-                     <p class="mb-0">Oyunun güvenilirliği ve performansı her aşamada test edilmektedir.</p>
+                     <p class="mb-0">Her aşamada, oyların etkinliği ve güvenilirliği incelenir.</p>
                   </div>
                </div>
             </div>
@@ -239,7 +238,7 @@
                   </div>
                   <div>
                      <h5>Şeffaf Süreç</h5>
-                     <p class="mb-0">Geliştirme sürecindeki her adımı toplulukla paylaşıyoruz.</p>
+                     <p class="mb-0">Geliştirme sürecindeki her aşamayı toplulukla paylaşıyoruz.</p>
                   </div>
                </div>
             </div>
@@ -353,7 +352,7 @@
                      </svg>
                   </div>
                   <h5>Alpha Geliştirme</h5>
-                  <p class="mb-4">HTML5 Canvas motoru geliştirilmesi, temel oyun mekaniği kodlanması ve ilk oynanabilir versiyon.</p>
+                  <p class="mb-4">HTML5 Canvas motoru, temel oyun mekaniğinin kodlanması ve ilk oynanabilir sürüm.</p>
                   <a href="#" class="btn-style-two">
                      <span>Devam Ediyor</span>
                      <i class="ti ti-loader"></i>
@@ -373,7 +372,7 @@
                      </svg>
                   </div>
                   <h5>Beta Test</h5>
-                  <p class="mb-4">Kapalı beta testleri, hata düzeltmeleri, oyuncu geri bildirimlerinin değerlendirilmesi ve optimizasyonlar.</p>
+                  <p class="mb-4">Kapalı beta testleri, hata düzeltmeleri, oyuncu geri bildirimlerinin değerlendirilmesi ve optimizasyonlar dahil olmak üzere bir dizi süreç yürütülür.</p>
                   <a href="#" class="btn-style-two">
                      <span>2025 Q1</span>
                      <i class="ti ti-calendar"></i>
@@ -391,7 +390,7 @@
                      </svg>
                   </div>
                   <h5>İlk Lansman</h5>
-                  <p class="mb-4">ReelRusher'ın resmi lansmanı, web ve mobil platformlarda yayına girme, pazarlama kampanyası.</p>
+                  <p class="mb-4">ReelRusher'ın resmi lansmanı, web ve mobil platformlarda yayına girme ve reklam kampanyası.</p>
                   <a href="#" class="btn-style-two">
                      <span>2025 Q2</span>
                      <i class="ti ti-calendar"></i>
@@ -407,7 +406,7 @@
                      </svg>
                   </div>
                   <h5>Seviye Editörü</h5>
-                  <p class="mb-4">Oyuncuların kendi seviyelerini oluşturabileceği, paylaşabileceği ve oynayabileceği editör aracı.</p>
+                  <p class="mb-4">Oyuncular, seviyelerini oluşturmak, paylaşmak ve oynamak için editör aracı kullanabilir.</p>
                   <a href="#" class="btn-style-two">
                      <span>2025 Q3</span>
                      <i class="ti ti-calendar"></i>
@@ -426,7 +425,7 @@
                      </svg>
                   </div>
                   <h5>Çok Oyunculu Mod</h5>
-                  <p class="mb-4">Arkadaşlarla yarışma, turnuvalar, liderlik tabloları ve sosyal özellikler entegrasyonu.</p>
+                  <p class="mb-4">Arkadaşlarla yarışma, turnuvalar, liderlik tabloları ve sosyal uyum entegrasyonu.</p>
                   <a href="#" class="btn-style-two">
                      <span>2025 Q4</span>
                      <i class="ti ti-calendar"></i>
@@ -441,8 +440,7 @@
                   </div>
                   <div>
                      <h5 class="text-white">2026 Mega Güncelleme</h5>
-                     <p class="mb-4 text-white">Yapay zeka destekli seviye üretimi, gerçek zamanlı etkinlikler, 
-                        mobil uygulama lansmanı ve yeni oyun modları ile ReelRusher evrimini tamamlıyor.</p>
+                     <p class="mb-4 text-white">ReelRusher, gerçek zamanlı etkinlikler, yeni oyun modları, mobil uygulama ve yapay zeka destekli seviye üretimi ile evrimini tamamlıyor.</p>
                      <a href="contact.html" class="btn btn-primary">
                         <span>2026 Q1-Q4 <i class="ti ti-arrow-up-right"></i></span>
                         <span>2026 Q1-Q4 <i class="ti ti-arrow-up-right"></i></span>
@@ -549,8 +547,7 @@
             <div class="cool-fact-card wow fadeInUp" data-wow-delay="400ms" data-wow-duration="1000ms">
                <h2 class="mb-0"><span class="counter">6</span>+</h2>
                <h4>Ay Geliştirme Süresi</h4>
-               <p class="mb-0">Profesyonel ve tutku dolu ekibimizle, kaliteli bir oyun deneyimi yaratmak için 
-                  çalışıyoruz.</p>
+               <p class="mb-0">Profesyonel ve tutkulu ekibimizle yüksek kaliteli bir oyun deneyimi sunmak için çalışıyoruz.</p>
             </div>
 
             <div class="cf-line wow fadeInUp" data-wow-delay="500ms" data-wow-duration="1000ms"></div>
@@ -558,7 +555,7 @@
             <div class="cool-fact-card wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1000ms">
                <h2 class="mb-0"><span class="counter">100</span>+</h2>
                <h4>Oyun Seviyesi</h4>
-               <p class="mb-0">Lansmanda 100'den fazla benzersiz seviye ile oyuncuların karşısına çıkacağız.</p>
+               <p class="mb-0">Lansmanda 100'den fazla benzersiz seviye ile oyuncularla karşılaşacağız.</p>
             </div>
 
             <div class="cf-line wow fadeInUp" data-wow-delay="700ms" data-wow-duration="1000ms"></div>
@@ -566,7 +563,7 @@
             <div class="cool-fact-card wow fadeInUp" data-wow-delay="800ms" data-wow-duration="1000ms">
                <h2 class="mb-0"><span class="counter">50</span>+</h2>
                <h4>Beta Test Kullanıcısı</h4>
-               <p class="mb-0">Geri bildirimlerini alacağımız özel beta test topluluğumuza katıl.</p>
+               <p class="mb-0">Özel beta test topluluğumuza katılarak geri bildirimlerini alıyoruz.</p>
             </div>
          </div>
       </div>
@@ -582,8 +579,7 @@
             <div class="col-12 col-md-6">
                <div class="section-heading pe-xl-5">
                   <h2 class="mb-4">Sıkça sorulan sorular</h2>
-                  <p class="mb-5">ReelRusher'ın geliştirme süreci ve lansmanı hakkında merak ettiğin soruların 
-                     cevapları burada.</p>
+                  <p class="mb-5">ReelRusher'ın geliştirme süreci ve lansmanı hakkında merak ettiklerinizi burada bulabilirsiniz.</p>
                   <a href="#" class="btn btn-primary">
                      <span>Daha Fazla Soru <i class="ti ti-arrow-up-right"></i></span>
                      <span>Daha Fazla Soru <i class="ti ti-arrow-up-right"></i></span>
@@ -601,10 +597,7 @@
                            </button>
                         </div>
                         <div id="faqQuestion4" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion-two">
-                           <div class="accordion-body">
-                              ReelRusher'ın beta versiyonu 2024 yılının son çeyreğinde yayınlanacak. 
-                              E-posta listesine kayıt olarak ilk bildirim alan kişiler arasında olabilirsin.
-                           </div>
+                           <div class="accordion-body">ReelRusher'ın beta versiyonu 2024 yılının son çeyreğinde yayınlanacak. E-posta listesine kayıtlı olan ilk kişiler arasında olmak mümkündür.</div>
                         </div>
                      </div>
 
@@ -615,10 +608,7 @@
                            </button>
                         </div>
                         <div id="faqQuestion5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion-two">
-                           <div class="accordion-body">
-                              ReelRusher, web tarayıcıları ve mobil cihazlar için optimize edilmiş bir oyun. 
-                              iOS, Android ve tüm modern web tarayıcılarında oynanabilecek.
-                           </div>
+                           <div class="accordion-body">ReelRusher, mobil cihazlar ve web tarayıcıları için tasarlanmış bir oyundur. Oyun, iOS, Android ve tüm çağdaş web tarayıcılarında oynanabilir.</div>
                         </div>
                      </div>
 
@@ -629,10 +619,7 @@
                            </button>
                         </div>
                         <div id="faqQuestion6" class="accordion-collapse collapse" data-bs-parent="#faqAccordion-two">
-                           <div class="accordion-body">
-                              E-posta adresini kayıt ettirerek erken erişim listesine katılabilirsin. 
-                              Beta test için ilk 50 kişi seçilecek ve özel davet alacak.
-                           </div>
+                           <div class="accordion-body">E-posta adresinizi girerek erken erişim listesine katılabilirsiniz. Beta testine giren ilk 50 kişi özel davet alacaklar.</div>
                         </div>
                      </div>
 
@@ -643,10 +630,7 @@
                            </button>
                         </div>
                         <div id="faqQuestion7" class="accordion-collapse collapse" data-bs-parent="#faqAccordion-two">
-                           <div class="accordion-body">
-                              ReelRusher tamamen ücretsiz bir oyun olacak. Reklam destekli model ile 
-                              oyuncularımıza bedava eğlence sunmayı planlıyoruz.
-                           </div>
+                           <div class="accordion-body">ReelRusher, tamamen ücretsiz bir oyun olacak. Reklam destekli model ile oyuncularımıza ücretsiz eğlence sağlayacağız.</div>
                         </div>
                      </div>
 
@@ -669,7 +653,7 @@
                   <a href="/" class="footer-logo mb-4">
                      <img src="assets/nav-brand-footer.png" alt="ReelRusher">
                   </a>
-                  <p style="color: #E8F5E8;">ReelRusher - Match-3 ve Zuma mekaniklerini birleştiren, piramit şeklinde tahta ile benzersiz bir puzzle oyun deneyimi.</p>
+                  <p style="color: #E8F5E8;">ReelRusher, Match-3 ve Zuma mekaniklerini birleştiren piramit şeklinde bir tahta ile benzersiz bir puzzle oyunudur.</p>
                 
                </div>
             </div>
@@ -998,8 +982,7 @@
 
    <div class="cookiealert shadow-lg">
       <h4 class="text-white"><i class="ti ti-cookie"></i> Çerez Bildirimi</h4>
-      <p class="mb-4 text-white">Web sitemizde en iyi deneyimi sunmak, sosyal medya özellikleri için ve trafiği analiz etmek 
-         amacıyla çerezler kullanıyoruz. <a href="privacy-policy.html" target="_blank">Çerez Politikası</a>'nı inceleyin.</p>
+      <p class="mb-4 text-white">Çerezler, web sitemizin sosyal medya özelliklerini ve trafiğini analiz etmek için kullanılır.</p>
       <button class="btn btn-dark btn-sm acceptcookies" type="button" aria-label="Close">Kabul Et</button>
    </div>
 
