--- a/team.html
+++ b/team.html
@@ -146,8 +146,7 @@
             </div>
             <div class="col-12 col-md-6">
                <div class="hero-content mt-0">
-                  <p class="mb-5 wow fadeInUp" data-wow-delay="700ms" data-wow-duration="1000ms">ReelRusher'ı hayata geçiren 
-                     yaratıcı ve deneyimli geliştirici ekibimiz, oyun dünyasında yenilikçi deneyimler sunmak için çalışıyor.</p>
+                  <p class="mb-5 wow fadeInUp" data-wow-delay="700ms" data-wow-duration="1000ms">ReelRusher'ı geliştiren yenilikçi ve yetenekli geliştirici ekibimiz, oyun dünyasında yeni deneyimler sunmak için çalışıyor.</p>
                   <a href="#signup" class="btn btn-primary wow fadeInUp" data-wow-delay="800ms" data-wow-duration="1000ms">
                      <span>Erken Erişim <i class="ti ti-arrow-up-right"></i></span>
                      <span>Erken Erişim <i class="ti ti-arrow-up-right"></i></span>
@@ -192,11 +191,9 @@
                <div class="about-content">
                   <div class="section-heading">
                      <h2 class="mb-3 text-white">Deneyimli ve yaratıcı ekibimiz</h2>
-                     <p class="mb-4 text-white">ReelRusher ekibi, oyun geliştirme alanında uzmanlaşmış, farklı disiplinlerden 
-                        gelen tutkulu profesyonellerden oluşuyor. Her birimiz, oyunculara unutulmaz deneyimler sunma hedefiyle çalışıyor.</p>
+                     <p class="mb-4 text-white">ReelRusher ekibi, oyun geliştirme konusunda uzmanlaşmış çeşitli alanlardan gelen tutkulu profesyonellerden oluşuyor. Her birimiz, oyunculara unutulmaz deneyimler sağlamak için çabalıyoruz.</p>
                      <hr class="mb-4 border-white">
-                     <p class="mb-5 text-white">"Amacımız, oyuncuları büyüleyecek, challenge edecek ve eğlendirecek 
-                        oyun deneyimleri yaratmak."</p>
+                     <p class="mb-5 text-white">İlk hedefimiz, oyuncuları büyüleyecek, zorlayacak ve eğlendirecek oyun deneyimleri sunmak.</p>
                      <a href="mechanics.html" class="btn btn-primary">
                         <span>Ekibi Keşfet <i class="ti ti-arrow-up-right"></i></span>
                         <span>Ekibi Keşfet <i class="ti ti-arrow-up-right"></i></span>
@@ -272,8 +269,7 @@
                <div class="pe-xl-5">
                   <div class="section-heading">
                      <h2 class="mb-3">Etkili geliştirme yaklaşımımız</h2>
-                     <p class="mb-0">5 yılı aşkın deneyimimizle, binlerce saatlik geliştirme sürecinden 
-                        çıkardığımız dersleri ReelRusher projesine uyarlıyoruz.</p>
+                     <p class="mb-0">5 yıllık deneyime dayanarak, binlerce saatlik geliştirme sürecinden dersleri ReelRusher projesine uyarlıyoruz.</p>
                   </div>
 
                   <div class="divider-sm"></div>
@@ -284,8 +280,7 @@
                      </div>
                      <div>
                         <h5>Agile Geliştirme Modeli</h5>
-                        <p class="mb-0">Hızlı iterasyonlar ve sürekli geri bildirimle esnek 
-                           geliştirme sürecimizi yönetiyoruz.</p>
+                        <p class="mb-0">Esnek geliştirme sürecimizi hızlı iterasyonlar ve sürekli geri bildirimle yönetiyoruz.</p>
                      </div>
                   </div>
 
@@ -295,8 +290,7 @@
                      </div>
                      <div>
                         <h5>Oyuncu Odaklı Tasarım</h5>
-                        <p class="mb-0">Her kararımızı oyuncu deneyimini iyileştirmek ve 
-                           eğlenceyi artırmak amacıyla alıyoruz.</p>
+                        <p class="mb-0">Her kararımızı oyuncu deneyimini geliştirmek ve eğlenceyi artırmak için alıyoruz.</p>
                      </div>
                   </div>
                </div>
@@ -415,8 +409,7 @@
             <div class="col-12 col-lg-8 col-xl-7">
                <h2 class="mb-4 text-white wow fadeInUp" data-wow-delay="400ms" data-wow-duration="1000ms">ReelRusher'a 
                   erken erişim ister misin?</h2>
-               <p class="mb-5 text-white wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1000ms">Oyunumuzun beta 
-                  versiyonuna erken erişim için e-posta adresini bırak, ilk oynayanlar arasında ol!</p>
+               <p class="mb-5 text-white wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1000ms">Oyunumuzun beta versiyonuna daha önce erişmek için e-posta adresinizi bırakın ve ilk oynayanlar arasında ol!</p>
                <a href="#signup" class="btn btn-light wow fadeInUp" data-wow-delay="800ms" data-wow-duration="1000ms">
                   <span>Erken Erişim <i class="ti ti-arrow-up-right"></i></span>
                   <span>Erken Erişim <i class="ti ti-arrow-up-right"></i></span>
@@ -485,7 +478,7 @@
                   <a href="/" class="footer-logo mb-4">
                      <img src="assets/nav-brand-footer.png" alt="ReelRusher">
                   </a>
-                  <p style="color: #E8F5E8;">ReelRusher - Match-3 ve Zuma mekaniklerini birleştiren, piramit şeklinde tahta ile benzersiz bir puzzle oyun deneyimi.</p>
+                  <p style="color: #E8F5E8;">ReelRusher, Match-3 ve Zuma mekaniklerini birleştiren piramit şeklinde bir tahta ile benzersiz bir puzzle oyunudur.</p>
                 
                </div>
             </div>
