--- a/contact.html
+++ b/contact.html
@@ -305,8 +305,7 @@
                         </div>
                         <div id="faqQuestion2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                            <div class="accordion-body">
-                              Evet, ReelRusher tamamen ücretsiz olarak oynanabilir. Tüm seviyeler ve özellikler 
-                              herkes için erişilebilir durumda. Herhangi bir gizli ücret veya abonelik sistemi bulunmuyor.
+                              ReelRusher kesinlikle ücretsiz olarak oynanabilir.  Herkes tüm seviyeleri ve özellikleri kullanabilir.  Herhangi bir abonelik sistemi veya gizli bir ücret yok.
                            </div>
                         </div>
                      </div>
@@ -319,8 +318,7 @@
                         </div>
                         <div id="faqQuestion3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                            <div class="accordion-body">
-                              Hayır, oyundaki ilerlemeniz güvenli bir şekilde saklanır. Tarayıcınızı değiştirseniz bile 
-                              aynı cihazda oyununuza kaldığınız yerden devam edebilirsiniz.
+                              Hayır, oyundaki ilerlemeniz saklanır.  Tarayıcınızı değiştirseniz bile aynı cihazda oyuna kaldığınız yerden devam edebilirsiniz.
                            </div>
                         </div>
                      </div>
@@ -333,8 +331,7 @@
                         </div>
                         <div id="faqQuestion4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                            <div class="accordion-body">
-                              Her hafta yeni seviyeler ekliyoruz. Güncelleme haberlerini e-posta listemizden 
-                              takip edebilir veya sosyal medya hesaplarımızı takip edebilirsiniz.
+                              Ortalama olarak her hafta yeni seviyeler ekliyoruz.  E-posta listemizden veya sosyal medya hesaplarımızdan güncellemeleri takip edebilirsiniz.
                            </div>
                         </div>
                      </div>
@@ -347,8 +344,7 @@
                         </div>
                         <div id="faqQuestion5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                            <div class="accordion-body">
-                              Geri bildirimlerinizi info@reelrusher.com adresine gönderebilir veya sosyal medya 
-                              hesaplarımızdan bize ulaşabilirsiniz. Her türlü öneri ve eleştiriye açığız.
+                              Geri bildirimlerinizi sosyal medya hesaplarımızdan veya info@reelrusher.com adresine gönderebilirsiniz.  Her türlü eleştiriye ve öneriye açığız.
                            </div>
                         </div>
                      </div>
@@ -361,8 +357,8 @@
                         </div>
                         <div id="faqQuestion6" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                            <div class="accordion-body">
-                              Teknik sorunları ve hataları yukarıdaki iletişim formunu kullanarak bildirebilirsiniz. 
-                              Sorunuzu detaylı bir şekilde açıklarsanız daha hızlı çözüm bulabiliriz.
+                              Teknik sorunları ve hataları yukarıdaki iletişim formunu kullanarak iletebilirsiniz. 
+                               Sorunuzu ayrıntılı bir şekilde açıklarsanız daha hızlı bir çözüm sağlayabiliriz.
                            </div>
                         </div>
                      </div>
@@ -375,9 +371,8 @@
                         </div>
                         <div id="faqQuestion7" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                            <div class="accordion-body">
-                              ReelRusher, Match-3 ve Zuma mekaniklerini birleştiren benzersiz bir puzzle oyunudur. 
-                              Piramit şeklindeki tahtada renkli topları eşleştirerek yok etmeniz gerekiyor. Üç veya 
-                              daha fazla aynı renkteki topu bir araya getirdiğinizde patlayarak puan kazanırsınız.
+                              ReelRusher, Match-3 ve Zuma mekaniklerini bir araya getiren ilginç bir puzzle oyunudur. 
+                               Piramit şeklindeki tahtada renkli topları bir araya getirerek yok etmelisiniz.  Üç veya daha fazla aynı renkli topu bir araya getirdiğinizde patlayarak puan kazanırsınız.
                            </div>
                         </div>
                      </div>
@@ -403,7 +398,7 @@
                   <a href="/" class="footer-logo mb-4">
                      <img src="assets/nav-brand-footer.png" alt="ReelRusher">
                   </a>
-                  <p style="color: #E8F5E8;">ReelRusher - Match-3 ve Zuma mekaniklerini birleştiren, piramit şeklinde tahta ile benzersiz bir puzzle oyun deneyimi.</p>
+                  <p style="color: #E8F5E8;">ReelRusher: Piramit şeklinde bir tahta, Match-3 ve Zuma mekaniklerini birleştiren benzersiz bir puzzle oyunudur.</p>
                 
                </div>
             </div>
